Fix content import

--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -1,4 +1,4 @@
-<aside class="sidebar" aria-label="Sidebar navigation">
+<aside id="sidebar-container" class="sidebar" aria-label="Sidebar navigation">
   <button
     class="sidebar__close"
     id="sidebarClose"
