--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -20,7 +20,7 @@
       />
       <img
         class="customers-section__search-icon"
-        src="../assets/icons/search.svg"
+        src="/assets/icons/search.svg"
         alt="search"
       />
     </div>
