--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <div id="include-header" data-include="partials/header.html" class="header">
   <div class="sidebar__logo">
-    <img src="./assets/icons/dashboard.svg" alt="logo" />
+    <img src="/assets/icons/dashboard.svg" alt="logo" />
     <span>v.01</span>
   </div>
   <button
