--- a/src/partials/sidebar.html
+++ b/src/partials/sidebar.html
@@ -10,7 +10,7 @@
 
   <div class="sidebar__top">
     <div class="sidebar__logo">
-      <img src="../assets/icons/logo.svg" alt="Company Logo" />
+      <img src="/assets/icons/logo.svg" alt="Company Logo" />
       <span>v.01</span>
     </div>
     <nav class="sidebar__nav" aria-label="Sidebar navigation" role="navigation">
@@ -23,7 +23,7 @@
           >
             <div class="sidebar__name">
               <svg class="icon">
-                <use xlink:href="../assets/icons/sprite.svg#dashboard"></use>
+                <use xlink:href="/assets/icons/sprite.svg#dashboard"></use>
               </svg>
               <span>Dashboard</span>
             </div>
@@ -33,7 +33,7 @@
           <a href="#product" class="sidebar__link" aria-label="Product section">
             <div class="sidebar__name">
               <svg class="icon">
-                <use xlink:href="../assets/icons/sprite.svg#product"></use>
+                <use xlink:href="/assets/icons/sprite.svg#product"></use>
               </svg>
               <span>Product</span>
             </div>
@@ -48,7 +48,7 @@
           >
             <div class="sidebar__name">
               <svg class="icon">
-                <use xlink:href="../assets/icons/sprite.svg#customers"></use>
+                <use xlink:href="/assets/icons/sprite.svg#customers"></use>
               </svg>
               <span>Customers</span>
             </div>
@@ -59,7 +59,7 @@
           <a href="#income" class="sidebar__link" aria-label="Income section">
             <div class="sidebar__name">
               <svg class="icon">
-                <use xlink:href="../assets/icons/sprite.svg#income"></use>
+                <use xlink:href="/assets/icons/sprite.svg#income"></use>
               </svg>
               <span>Income</span>
             </div>
@@ -70,7 +70,7 @@
           <a href="#promote" class="sidebar__link" aria-label="Promote section">
             <div class="sidebar__name">
               <svg class="icon">
-                <use xlink:href="../assets/icons/sprite.svg#promote"></use>
+                <use xlink:href="/assets/icons/sprite.svg#promote"></use>
               </svg>
               <span>Promote</span>
             </div>
@@ -81,7 +81,7 @@
           <a href="#help" class="sidebar__link" aria-label="Help section">
             <div class="sidebar__name">
               <svg class="icon">
-                <use xlink:href="../assets/icons/sprite.svg#help"></use>
+                <use xlink:href="/assets/icons/sprite.svg#help"></use>
               </svg>
               <span>Help</span>
             </div>
@@ -93,7 +93,7 @@
   </div>
   <div class="sidebar__user">
     <img
-      src="../assets/images/user.png"
+      src="/assets/images/user.png"
       alt="Evano, Project Manager"
       class="user-avatar"
     />
