--- a/src/partials/customers.html
+++ b/src/partials/customers.html
@@ -1,4 +1,4 @@
-<div>
+<section id="customers-section" class="content-section">
   <div class="customers-section__header">
     <div class="customers-section__header-content">
       <h2 class="customers-section__title">All Customers</h2>
@@ -45,4 +45,4 @@
     class="customers-section__pagination-container"
     aria-live="polite"
   ></div>
-</div>
+</section>
